added redis and fixed some minor bugs